Changes for 2.1.0

New features:
A.F.....S. [ZBXNEXT-1466] implemented macros support in trigger comments (dimir, Eduard)
A......... [ZBXNEXT-1491] implemented property array support for all get methods (Pavels)
A......... [ZBXNEXT-1491] implemented the map.get selectUrls parameter (Pavels)
A......... [ZBXNEXT-1491] implemented the itemprototype.get selectDiscoveryRule parameter (Pavels)
A.F....... [ZBXNEXT-484] added filtering by application in Monitoring->Overview and Data/Triggers overview screen elements (Vedmak)
........S. [ZBXNEXT-1089] added support of user macros in global scripts (Sasha)
A.F.I..PS. [ZBXNEXT-1526] added support of configurable number of retries per WEB scenario (Alexei)
A.F.....S. [ZBXNEXT-1286] added support of low-level discovery macros in trigger prototype expressions (Sasha)
A.F.I..PS. [ZBXNEXT-450] added support of SHA authentication protocol and AES privacy protocol for SNMPv3 chacks (Eduard, Sasha)
A.F.I..PS. [ZBXNEXT-308] added support of WEB monitoring using HTTP proxy (Alexei)
A.F.I..PS. [ZBXNEXT-20] added support of templated Web scenarios (Sasha, Vedmak)
A.F....... [ZBXNEXT-887] fixed permission calculation (Eduard)
A......... [ZBXNEXT-1492] dropped support of output shorten for the API get methods (Pavels)
.......PS. [ZBXNEXT-1410] increased performance of operation with historical and configuration caches (Sasha)
........S. [ZBXNEXT-1304] added resolving of LLD macros in an item prototype and a trigger prototype descriptions (Sasha)
....I...S. [ZBXNEXT-1472] added support of parallel processing of time-based functions (Sasha)
A.F....... [ZBXNEXT-1323] implemented macros in script confirmation text (Eduard)
.......PS. [ZBX-3449] added support of multiple dynamic SNMP indexes (Sasha)
..F....... [ZBXNEXT-1441] added media type name to action operations description (Vedmak)
A.F.I...S. [ZBXNEXT-1186] increased length to 2048 characters of expression field for triggers (Sasha)