@@ -1,6 +1,7 @@
 Changes for 2.1.0
 
 New features:
+.......PS. [ZBX-5920] added prefetching of 2 MB of data for Oracle sql selects (dimir)
 A.F.....S. [ZBXNEXT-1466] implemented macros support in trigger comments (dimir, Eduard)
 A......... [ZBXNEXT-1491] implemented property array support for all get methods (Pavels)
 A......... [ZBXNEXT-1491] implemented the map.get selectUrls parameter (Pavels)
@@ -78,6 +79,7 @@ Changes for 2.0.5rc1
 
 New features:
 A.F....... [ZBX-1357] updated Brazilian Portuguese, French and Russian translations; thanks to Zabbix translators (Richlv)
+.......PS. [ZBX-5920] added prefetching of 2 MB of data for Oracle sql selects (dimir)
 
 Bug fixes:
 .......PS. [ZBX-3379] added SourceIP support for SNMP items (dimir)
